dbsp: Make using the page cache optional in storage backends.
The DBSP storage backends have their own internal block cache.  Until now,
that means that they bypass the operating system page cache by using
`O_DIRECT`.  However, testing shows that bypassing the page cache is slower
than using it (presumably because we haven't implemented a very good cache
sizing or replacement algorithm yet).  Thus, this commit turns off
`O_DIRECT` by default and adds a knob to turn it back on.

Most of this commit is other things, though.  First, it adds a new
`StorageConfig` in `pipeline-types` for configuring the storage location
(which was there directly in `PipelineConfig`) and whether to use the page
cache, and so refactoring to use that is a bit of churn.  Second, it adds
a command line option `--feldera-cache` to the nexmark benchmark to turn
`O_DIRECT` back on to make comparative benchmarking easy.
